--- a/pricing/index.html
+++ b/pricing/index.html
@@ -271,7 +271,7 @@
   <div class="container text-center">
     <div class="blur"></div>
     <h1 class="fs-56">Business Case<br>Calculator</h1>
-    <h2 class="fs-28 mb-8">Calculate your cost savings<br>with Ventory. Pay as your grow</h2>
+    <h2 class="fs-28 mb-8">Calculate your cost savings<br>with Ventory. Pay as you grow!</h2>
   <a 
     role="button" 
     class="btn btn-filled center" 
